--- a/templates/admin/tutoriales.html
+++ b/templates/admin/tutoriales.html
@@ -106,8 +106,8 @@
             <thead class="table-light">
                 <tr>
                     <th>Tutorial</th>
-                    <th>Column 2</th>
-                    <th>Column 3</th>
+                    <th>Categoría</th>
+                    <th>Registrado por</th>
                 </tr>
             </thead>
             <tbody class="table-group-divider">
