--- a/templates/admin/tutoriales.html
+++ b/templates/admin/tutoriales.html
@@ -112,7 +112,7 @@
             </thead>
             <tbody class="table-group-divider">
                 <tr class="">
-                    <td scope="row">Item</td>
+                    <td scope="row">Linux</td>
                     <td>Item</td>
                     <td>Item</td>
                 </tr>
